
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Retention Scheduler</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="edit_event">EDIT EVENT</string>
    
    <string name="event_name">Event Name</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="delete_event">DELETE EVENT</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="hint_desc">Description</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="activity_title">This is an activity!</string>
    <color android:id="@+id/color1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="white_color">#ffffff</color>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="open_activity_title">Open daw!</string>
    <color android:id="@+id/color1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="create_color">#392A41</color>
    <color android:layout_width="wrap_content" android:id="@+id/color1" android:layout_height="wrap_content" name="background">#000000</color>
	<color android:id="@+id/color1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="edit_color">#56546A</color>
	<color android:id="@+id/color1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="delete_color">#6A907B</color>

	<style name="ButtonText">
       <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">10dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">30sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>
	<string name="assoc_note">ASSOCIATE NOTES</string>
	<string name="assoc_slide">ASSOCIATE SLIDES</string>
	<string name="add_event">ADD</string>
</resources>
